--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   app:
+    image: backend
     build: .
     ports:
       - "3000:3000"
@@ -11,10 +12,9 @@ services:
       - DB_USER=root
       - DB_PASSWORD=password
       - DB_NAME=testdb
-
+    restart: always
   db:
     image: mysql:5.7
-    command: --default-authentication-plugin=mysql_native_password
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=testdb
