--- a/teste/docker-compose.yml
+++ b/teste/docker-compose.yml
@@ -1,11 +1,12 @@
-version: '3'
+version: '3.4'
 services:
   app:
-    build: .
+    image: mateusdata/meu_app
     ports:
       - "3000:3000"
     depends_on:
-      - db
+      db:
+        condition: service_started
     environment:
       - DB_HOST=db
       - DB_USER=root
@@ -21,6 +22,15 @@ services:
       - db_data:/var/lib/mysql
     ports:
       - "3306:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin","ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
+  frontend:
+    image: mateusofdata/frontendrotulo
+    ports:
+      - "3001:80"
+    restart: always
 
 volumes:
   db_data:
