--- a/teste/docker-compose.yml
+++ b/teste/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "3000:3000"
     depends_on:
       db:
-        condition: service_started
+        condition: service_healthy
     environment:
       - DB_HOST=db
       - DB_USER=root
